# melt

./: README.md  flake.nix
.github/workflows/: build.yaml  ci.yaml
melt-dbt/: .envrc  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
melt-dbt/macros/: _macros.yml  create_types.sql  generate_schema_name.sql
melt-dbt/macros/utils/: create_enum.sql
melt-dbt/models/marts/core/: _core__models.yml  users.sql
melt-dbt/models/marts/shop/: _shop__models.yml  products.sql  purchases.sql
melt-dbt/models/sources/faker/: _faker__models.yml  src_faker__products.sql  src_faker__purchases.sql  src_faker__users.sql
melt-dbt/models/staging/faker/: _faker__models.yml  stg_faker__products.sql  stg_faker__purchases.sql  stg_faker__users.sql
melt-infra/: .envrc  .gitignore  .prettierignore  README.md  cdk8s.yaml  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
melt-infra/imports/: clusterWorkflowTemplates-argoproj.io.ts  cronWorkflows-argoproj.io.ts  k8s.ts  workflowArtifactGcTasks-argoproj.io.ts  workflowEventBindings-argoproj.io.ts  workflowTaskResults-argoproj.io.ts  workflowTaskSets-argoproj.io.ts  workflowTemplates-argoproj.io.ts  workflows-argoproj.io.ts
melt-infra/src/: airbyte.ts  chart.ts  namespace.ts  postgres.ts  secrets.ts  synth.ts  utils.ts
melt-infra/src/argo-workflows/: index.ts
melt-infra/src/argo-workflows/templates/: check-http-get-json-or-http-post-json.ts  check-postgres-is-ready.ts  index.ts  (+3 more)
melt-infra/tests/: synth.test.ts
melt-infra/tests/__snapshots__/: synth.test.ts.snap
(+2 files in other folders)
